[[bin]]
name = "illuminationd"
path = "src/illuminationd/main.rs"

[[bin]]
name = "illumination-provider-leds"
path = "src/illumination-provider-leds/main.rs"

[package]
name = "illuminationd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.25.0", features = ["fs", "ioctl"] }
inotify = "0.10.0"
zbus = "3.3.0"
epoll = "4.3.1"
tonic = "0.8.2"

[build-dependencies]
tonic-build = { version = "0.8.2" }
